--- a/IRF_Project/IRF_Project/Form1.resx
+++ b/IRF_Project/IRF_Project/Form1.resx
@@ -138,16 +138,16 @@
     <value>Kereső</value>
   </data>
   <data name="leltárElemekKivezetéseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>207, 22</value>
+    <value>221, 22</value>
   </data>
   <data name="leltárElemekKivezetéseToolStripMenuItem.Text" xml:space="preserve">
-    <value>Leltár elemek kivezetése</value>
+    <value>Leltári elemek módosítása</value>
   </data>
   <data name="leltárElemekHozzáadásaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>207, 22</value>
+    <value>221, 22</value>
   </data>
   <data name="leltárElemekHozzáadásaToolStripMenuItem.Text" xml:space="preserve">
-    <value>Leltár elemek hozzáadása</value>
+    <value>Egyéb(listából való törlések)</value>
   </data>
   <data name="szerkesztőFelületToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>109, 20</value>
@@ -193,10 +193,10 @@
     <value>1</value>
   </data>
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 40</value>
+    <value>0, 27</value>
   </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>753, 314</value>
+    <value>753, 322</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -220,7 +220,7 @@
     <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>596, 9</value>
+    <value>596, 7</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>145, 13</value>
@@ -248,6 +248,9 @@
   </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>59</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
@@ -1399,6 +1402,12 @@
   <data name="&gt;&gt;főoldalToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;keresőToolStripMenuItem.Name" xml:space="preserve">
+    <value>keresőToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;keresőToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;szerkesztőFelületToolStripMenuItem.Name" xml:space="preserve">
     <value>szerkesztőFelületToolStripMenuItem</value>
   </data>
@@ -1427,12 +1436,6 @@
     <value>hELPToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;hELPToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;keresőToolStripMenuItem.Name" xml:space="preserve">
-    <value>keresőToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;keresőToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;eszkozokBindingSource.Name" xml:space="preserve">
