--- a/IRF_Project/IRF_Project/Form1.resx
+++ b/IRF_Project/IRF_Project/Form1.resx
@@ -137,18 +137,6 @@
   <data name="keresőToolStripMenuItem.Text" xml:space="preserve">
     <value>Kereső</value>
   </data>
-  <data name="leltárElemekKivezetéseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 22</value>
-  </data>
-  <data name="leltárElemekKivezetéseToolStripMenuItem.Text" xml:space="preserve">
-    <value>Leltári elemek módosítása</value>
-  </data>
-  <data name="leltárElemekHozzáadásaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 22</value>
-  </data>
-  <data name="leltárElemekHozzáadásaToolStripMenuItem.Text" xml:space="preserve">
-    <value>Egyéb(listából való törlések)</value>
-  </data>
   <data name="szerkesztőFelületToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>109, 20</value>
   </data>
@@ -1390,6 +1378,9 @@
         //////////////////////////////////8=
 </value>
   </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Főoldal</value>
   </data>
@@ -1409,18 +1400,6 @@
     <value>szerkesztőFelületToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;szerkesztőFelületToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;leltárElemekKivezetéseToolStripMenuItem.Name" xml:space="preserve">
-    <value>leltárElemekKivezetéseToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;leltárElemekKivezetéseToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;leltárElemekHozzáadásaToolStripMenuItem.Name" xml:space="preserve">
-    <value>leltárElemekHozzáadásaToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;leltárElemekHozzáadásaToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;excelExportálásToolStripMenuItem.Name" xml:space="preserve">
